--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,26 +1,12 @@
 {
   "version": "0.2.0",
-  "compounds": [
-    {
-      "name": "Server and Client",
-      "configurations": ["Server", "Client"]
-    }
-  ],
   "configurations": [
     {
-      "name": "Server",
       "type": "node",
       "request": "launch",
-      "program": "nodemon",
-      "args": ["./server/server.js"],
-      "console": "integratedTerminal"
-    },
-    {
-      "name": "Client",
-      "type": "node",
-      "request": "launch",
-      "program": "${workspaceFolder}/node_modules/react-scripts/bin/react-scripts.js",
-      "args": ["start"],
+      "name": "Launch Server",
+      "program": "${workspaceFolder}/server/server.js",
+      "outFiles": ["${workspaceFolder}/**/*.js"],
       "console": "integratedTerminal"
     }
   ]
