--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon -L  --exec node ./routes/api/server.js",
+    "server": "nodemon -L  --exec node ./api/server.js",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build && git push"
   },
