--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,5 @@
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/" }
   ],
-  "static": {
-    "disabled": true
-  }
+  "trailingSlash": false
 }
