enabled serverless function on vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/server.js",
-      "use": "@vercel/node"
-    }
-  ]
+  "routes": [{ "src": "/movies/search", "dest": "/api/server.js" }]
 }
