--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "gh-pages": "^6.1.1",
     "mongoose": "^8.3.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -26,8 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon -L  --exec node ./api/server.js",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build && git push"
+    "predeploy": "yarn run build"
   },
   "eslintConfig": {
     "extends": [
