--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +15,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "gh-pages": "^6.1.1",
-    "mongoose": "^8.3.2",
+    "mongoose": "^8.3.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
@@ -53,6 +54,7 @@
   "author": "Tobias Macha <tobias-macha@gmx.de>",
   "license": "MIT",
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
   }
 }
